# ic-urfu-odoo-module

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml  render.yaml  ruff.toml
.cursor/rules/: 001-project-overview.mdc  002-python-style.mdc  100-fastapi-patterns.mdc  101-database.mdc  102-testing.mdc  103-logging.mdc  104-odoo.mdc  110-api-design.mdc
app/: __init__.py
app/core/: __init__.py  config.py  logging.py
docs/: CREDENTIALS.md  SUMMARY_ZET_AND_MODULAR.md
docs/1_iteration/: FIX_PASSWORDS.md  GETTING_STARTED.md  TECHNICAL_OVERVIEW_RU.md
docs/2_iteration/: CURSOR_2_ITERATION.md
ic_urfu_module/: __init__.py  __manifest__.py  constants.py  hooks.py
ic_urfu_module/config/: __init__.py  demo_credentials.py
ic_urfu_module/data/: demo_users.xml  program_template_data.xml
ic_urfu_module/demo/: __init__.py  demo_plans.xml  demo_subjects.xml  demo_users.xml
ic_urfu_module/doc-generator/: doc-generator.py
ic_urfu_module/doc_generator/: Individual_Plan.docx  __init__.py  doc_generator.py
ic_urfu_module/models/: __init__.py  ic_urfu.py  ic_urfu_config.py
ic_urfu_module/security/: ic_urfu_security.xml  ir.model.access.csv
ic_urfu_module/views/: diwapodoo_views.xml  ic_urfu_config_views.xml  ic_urfu_views.xml  program_template_views.xml  reject_plan_wizard_views.xml
ic_urfu_module/wizards/: __init__.py  reject_plan_wizard.py
local-env/: Dockerfile  README.md  docker-compose.yml  odoo.conf
scripts/: db_status.sh  fix_passwords.sh  generate_demo_users.py  init.sh
